--- a/app/components/main/main.view.html
+++ b/app/components/main/main.view.html
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Angmerica</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
+    I built this site using AngularJS
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
@@ -10,7 +10,7 @@
 <div class="row marketing">
   <h4>HTML5 Boilerplate</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+
   </p>
 
   <h4>Angular</h4>
