--- a/app/components/main/main.view.html
+++ b/app/components/main/main.view.html
@@ -1,23 +1,14 @@
 <div class="jumbotron">
   <h1>Angmerica</h1>
   <p class="lead">
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
+    <img src="assets/images/angular-icon.png" alt="I'm Yeoman"><br>
     I built this site using AngularJS
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>What is this?</h4>
   <p>
-
+    This site was created using AngularJS. I used the yeoman tool to scaffold this site.
   </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
