testing ig .htaccess causes 404 err

--- a/app/components/main/main.view.html
+++ b/app/components/main/main.view.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>Angmerica</h1>
   <p class="lead">
-
+    <img src="assets/images/angular-icon.png" alt="I'm Yeoman"><br>
     I built this site using AngularJS
   </p>
 </div>
