--- a/app/components/core/header/header.view.html
+++ b/app/components/core/header/header.view.html
@@ -1,7 +1,8 @@
+<div class="header">
   <ul class="nav nav-pills pull-right">
     <li ng-class="{active:activeRoute('/')}"><a ng-href="#">Main</a></li>
     <li ng-class="{active:activeRoute('/about')}"><a ng-href="#/about">About</a></li>
     <li ng-class="{active:activeRoute('/resume')}"><a ng-href="#/resume">Resume</a></li>
   </ul>
   <h3 class="text-muted">Angmerica</h3>
-
+</div>
