--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -6,6 +6,10 @@
         <li>DONE: Learn how to get a web Page</li>
         <li>DONE: Learn how to do CI</li>
         <li>Angularify this site</li>
+            <ul>
+                <li>Fix the module.js test bug</li>
+                <li>Place styles inside of assets folder</li>
+            </ul>
         <li>Create angular seed</li>
         <li>Create angular playbook</li>
         <li>Create angular tutorial</li>
