Complete module test bug

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -7,7 +7,7 @@
         <li>DONE: Learn how to do CI</li>
         <li>Angularify this site</li>
             <ul>
-                <li>Fix the module.js test bug</li>
+                <li>DONE: Fix the module.js test bug</li>
                 <li>Place styles inside of assets folder</li>
             </ul>
         <li>Create angular seed</li>
