update todo with a add resume

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -10,6 +10,7 @@
                 <li>DONE: Fix the module.js test bug</li>
                 <li>Place styles inside of assets folder</li>
             </ul>
+        <li>Update site with Resume</li>
         <li>Create angular seed</li>
         <li>Create angular playbook</li>
         <li>Create angular tutorial</li>
