filled in resume view with resume content. Applied min amount of bootstrap.

--- a/app/components/resume/resume.view.html
+++ b/app/components/resume/resume.view.html
@@ -1,1 +1,125 @@
-Hello World
+<div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">EDUCATION</h3>
+    </div>
+    <div class="panel-body">
+      <p>
+        Pace University, New York, NY   January 2013 – Present<br />
+        Bachelor of Science in Computer Science; GPA 3.85 Anticipated January 2014
+      </p>
+      <p>
+        Palomar Community College, San Marcos, CA   January 2012 – August 2012 <br />
+        Associates in General Studies/Science and Mathematics; G.P.A 3.79
+      </p>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">TECHNICAL SKILLS (Scale 1-10)</h3>
+    </div>
+    <div class="panel-body">
+      <ul>
+        <li>AngularJS - 6</li>
+        <li>Karma/Protractor - 4</li>
+        <li>Git - 6</li>
+        <li>Agile/Scrum - 6</li>
+        <li>Microsoft Office suite - 7</li>
+        <li>Photoshop- 3</li>
+        <li>Visual Basic - 2</li>
+        <li>Java - 4</li>
+        <li>HTML/CSS - 4</li>
+        <li>Android (Eclipse) - 4</li>
+        <li>Unity 4 - 3</li>
+        <li>JavaScript/JQuery - 4</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">RELEVANT EXPERIENCE</h3>
+    </div>
+
+    <div class="panel-body">
+      <h4>Elephant Ventures, New York, NY May 2014 – Present</h4>
+      <h5>Junior Software Engineer</h5>
+      <h6>Current Project</h6>
+      <ul>
+        <li>Collaborate with a team of 4 to develop using a Spring back-end and AngularJS front-end.</li>
+        <li>Standardized front-end MVC file structure for an AngularJS environment.</li>
+        <li>Utilize Karma for unit testing and Protractor for end-to-end testing for the front-end.</li>
+        <li>Use scrum to develop in 2-weeks sprint iterations while rotating Scrum Master each sprint.</li>
+        <li>Demonstrates project to client at the end of each sprint period.</li>
+        <li>Responsible of documenting software architecture and design as project is developed.</li>
+      </ul>
+      <h6>Previous Project</h6>
+      <ul>
+        <li>Collaborated with a team of 4 to develop using the MEAN Stack JavaScript framework.</li>
+        <li>In charge of learning AngularJS and setting up initial front-end project structure.</li>
+        <li>Use scrum to develop in high pace 1-week sprint iterations.</li>
+      </ul>
+
+      <h4>Seidenberg Creative Lab, Pace University, New York, NY May 2013 – Present</h4>
+      <h5>Programmer/Developer</h5>
+      <ul>
+        <li>Project leader for STEM Education application on the Unity 4 game engine that applies Agile/Scrum methodology.</li>
+        <li>Co-Developed two Android STEM app over a single summer semester (High School Study Guide and NXT Mobile).</li>
+      </ul>
+
+      <h4>Seidenberg, Pace University, New York, NY   March 2013 – Present</h4>
+      <h5>Programming Tutor</h5>
+
+      <ul>
+        <li>Tutor students in Calculus I, Physics I and II, Beginning Java, Intermediate Java, Beginning Web Programming language (HTML/CSS/JavaScript), Computer Logic, Programming Fundamentals, and Circuit Fundamentals.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">OTHER WORK EXPERIENCE</h3>
+    </div>
+
+    <div class="panel-body">
+      <h4>United States Marine Corps Reserves, Brooklyn, NY   November 2013 – October 2014</h4>
+      <h5>Platoon Sergeant SGT/E-5</h5>
+      <ul>
+        <li>Manage the welfare of over 100 Marines ensuring that they are deployment ready.</li>
+      </ul>
+
+      <h4>United States Marine Corps  June 2008 – March 2012</h4>
+
+      <h5>Section Leader/Field Service Representative Supervisor CPL/E-4, Camp Pendleton, CA  January 2011 – March 2012</h5>
+      <ul>
+        <li>Delivered product specific briefings to military personnel at all levels.</li>
+        <li>Tracked and accounted for all system and spare inventories as assigned to the work area.</li>
+        <li>Supervised and performed all functions listed under Field Service Representative.</li>
+      </ul>
+
+      <h5>Field Service Representative LCPL/E-3 | PFC/E-2, Camp Hanson, Okinawa, Japan  June 2008 – December 2010</h5>
+      <ul>
+        <li>Installed, maintained, troubleshot, and repaired ground electronic devices (i.e. radios and PCs).</li>
+        <li>Coordinated the return and repair of defective Line Replaceable Units.</li>
+        <li>Upgraded equipment via software, firmware and hardware under guidance of OEMs.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">HONORS/RECOGNITION</h3>
+    </div>
+
+    <div class="panel-body">
+      <ul>
+        <li>Letter of Appreciation, FIRST Tech Challenge    January 2014</li>
+        <li>Letter of Appreciation, Habitat for Humanity      October 2011</li>
+        <li>Letter of Appreciation, Operation Goodwill    December 2009</li>
+        <li>Letter of Appreciation, 7th Communication Battalion     October 2009</li>
+        <li>Meritorious Recognition, United States Marine Corps   October 2008</li>
+      </ul>
+    </div>
+  </div>
+</div>
