Update todo list

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -1,22 +1,23 @@
 <h1>Hello World from Angmerica!</h1>
-<p>I am learning to start my own webpage.</p>
+<p>I am learning to start my own webpage. And I want to do it in AngularJS.</p>
 
 <div>To Do:
-    <ol>
-        <li>DONE: Learn how to get a web Page</li>
-        <li>DONE: Learn how to do CI</li>
-        <li>Angularify this site</li>
-            <ul>
-                <li>DONE: Fix the module.js test bug</li>
-                <li>Place styles inside of assets folder</li>
-            </ul>
-        <li>Update site with Resume</li>
-        <li>Create angular seed</li>
-        <li>Create angular playbook</li>
-        <li>Create angular tutorial</li>
-        <li>Create angular scaffolder</li>
-        <li>Learn Chef/Vagrant</li>
-        <li>Create a whole MEAN stack app</li>
-        <li>Show off my work</li>
-    </ol>
+  <ol>
+    <li>DONE: Learn how to get a web Page</li>
+    <li>DONE: Learn how to do CI</li>
+    <li>Angularify this site</li>
+      <ul>
+        <li>DONE: Fix the module.js test bug</li>
+        <li>Place styles inside of assets folder</li>
+      </ul>
+    <li>DONE:Update site with Resume</li>
+    <li>Make Site Responsive</li>
+    <li>Create angular seed</li>
+    <li>Create angular playbook</li>
+    <li>Create angular tutorial</li>
+    <li>Create angular scaffolder</li>
+    <li>Learn Chef/Vagrant</li>
+    <li>Create a whole MEAN stack app</li>
+    <li>Show off my work</li>
+  </ol>
 </div>
