Update resume with contact info. Change to Title Case.

--- a/app/components/resume/resume.view.html
+++ b/app/components/resume/resume.view.html
@@ -1,7 +1,17 @@
 <div>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">EDUCATION</h3>
+      <h3 class="panel-title">Contact Info</h3>
+    </div>
+    <div class="panel-body">
+      <p>Email: angmerica@gmail.com</p>
+      <p>Git: https://github.com/MichaelAng</p>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Education</h3>
     </div>
     <div class="panel-body">
       <p>
@@ -17,7 +27,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">TECHNICAL SKILLS (Scale 1-10)</h3>
+      <h3 class="panel-title">Technical Skills (scale 1-10)</h3>
     </div>
     <div class="panel-body">
       <ul>
@@ -39,7 +49,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">RELEVANT EXPERIENCE</h3>
+      <h3 class="panel-title">Relevant Experience</h3>
     </div>
 
     <div class="panel-body">
@@ -79,7 +89,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">OTHER WORK EXPERIENCE</h3>
+      <h3 class="panel-title">Other Work Experience</h3>
     </div>
 
     <div class="panel-body">
@@ -109,7 +119,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">HONORS/RECOGNITION</h3>
+      <h3 class="panel-title">Honors/Recognition</h3>
     </div>
 
     <div class="panel-body">
