change priorities. angular playbook lowered. angular turorial increased.

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -12,11 +12,12 @@
       </ul>
     <li>DONE:Update site with Resume</li>
     <li>Create angular seed</li>
-    <li>Create angular playbook</li>
+    <li>Create angular tutorial</li>
     <li>Make Site Responsive</li>
     <li>Create angular tutorial</li>
     <li>Create angular scaffolder</li>
     <li>Learn Chef/Vagrant</li>
+    <li>Create angular playbook</li>
     <li>Create a whole MEAN stack app</li>
     <li>Show off my work</li>
   </ol>
