update progress log

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -11,7 +11,7 @@
         <li>Place styles inside of assets folder</li>
       </ul>
     <li>DONE:Update site with Resume</li>
-    <li>Create angular seed</li>
+    <li>In Progress: Create angular seed</li>
     <li>Create angular tutorial</li>
     <li>Make Site Responsive</li>
     <li>Create angular tutorial</li>
