add a sign up to google analytics todo

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -12,10 +12,11 @@
       </ul>
     <li>DONE:Update site with Resume</li>
     <li>In Progress: Create angular seed</li>
+    <li>Create angular scaffolder</li>
     <li>Create angular tutorial</li>
     <li>Make Site Responsive</li>
     <li>Create angular tutorial</li>
-    <li>Create angular scaffolder</li>
+    <li>Sign up for google analytics</li>
     <li>Learn Chef/Vagrant</li>
     <li>Create angular playbook</li>
     <li>Create a whole MEAN stack app</li>
