--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -5,14 +5,14 @@
   <ol>
     <li>DONE: Learn how to get a web Page</li>
     <li>DONE: Learn how to do CI</li>
-    <li>Angularify this site</li>
+    <li>DONE: Angularify this site</li>
       <ul>
         <li>DONE: Fix the module.js test bug</li>
-        <li>Place styles inside of assets folder</li>
+        <li>DONE: Place styles inside of assets folder</li>
       </ul>
     <li>DONE:Update site with Resume</li>
     <li>In Progress: Create angular seed</li>
-    <li>Create angular scaffolder</li>
+    <li>In Progress: Create angular scaffolder</li>
     <li>Create angular tutorial</li>
     <li>Make Site Responsive</li>
     <li>Create angular tutorial</li>
