add sub task to scaffolder

--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -13,6 +13,10 @@
     <li>DONE:Update site with Resume</li>
     <li>In Progress: Create angular seed</li>
     <li>In Progress: Create angular scaffolder</li>
+      <ul>
+        <li>Update the build grunt file</li>
+        <li>Fill see with default content</li>
+      </ul>
     <li>Create angular tutorial</li>
     <li>Make Site Responsive</li>
     <li>Create angular tutorial</li>
