--- a/app/components/resume/resume.view.html
+++ b/app/components/resume/resume.view.html
@@ -5,7 +5,7 @@
     </div>
     <div class="panel-body">
       <p>Email: angmerica@gmail.com</p>
-      <p>Git: https://github.com/MichaelAng</p>
+      <p>Git: <a href="https://github.com/MichaelAng">https://github.com/MichaelAng</a></p>
     </div>
   </div>
 
