--- a/app/components/about/about.view.html
+++ b/app/components/about/about.view.html
@@ -11,6 +11,7 @@
         <li>DONE: Place styles inside of assets folder</li>
       </ul>
     <li>DONE:Update site with Resume</li>
+    <li>DONE:Fix Angmerica.com</li>
     <li>In Progress: Create angular seed</li>
     <li>In Progress: Create angular scaffolder</li>
       <ul>
